@@ -3,6 +3,7 @@ package com.group3.exercise.bankapp.services.account;
 import java.util.List;
 import java.util.Optional;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -42,32 +43,46 @@ public class AccountServiceImpl implements AccountService {
 
     @Override
     public AccountResponse withdraw(Long id, TransactionRequest request) {
-        return Optional.ofNullable(id)
-                .map(accountRepository::findById)
+        if(!isValidAmount(request.getAmount())){
+            throw new BankAppException(BankAppExceptionCode.INVALID_AMOUNT_EXCEPTION);
+        }
+        Optional<Account> found = accountRepository.findById(id);
+        if(!found.isPresent()){
+            throw new BankAppException(BankAppExceptionCode.ACCOUNT_NOT_FOUND_EXCEPTION);
+        }
+        return Optional.of(found)
                 .map(Optional::get)
-                .map(found -> this.transactionStrategyNavigator.withdraw(found, request.getAmount()))
+                .map(a -> this.transactionStrategyNavigator.withdraw(a, request.getAmount()))
                 .map(accountRepository::save)
                 .map(accountAdapter::mapToResponse)
-                .orElseThrow(() -> new BankAppException(BankAppExceptionCode.INTERNAL_SERVER_ERROR));
+                .orElseThrow(() -> new BankAppException(BankAppExceptionCode.SERVER_TRANSACTION_EXCEPTION));
     }
 
     @Override
     public AccountResponse deposit(Long id, TransactionRequest request) {
-        return Optional.of(id)
-                .map(accountRepository::findById)
+        if(!isValidAmount(request.getAmount())){
+            throw new BankAppException(BankAppExceptionCode.INVALID_AMOUNT_EXCEPTION);
+        }
+        Optional<Account> found = accountRepository.findById(id);
+        if(!found.isPresent()){
+            throw new BankAppException(BankAppExceptionCode.ACCOUNT_NOT_FOUND_EXCEPTION);
+        }
+        return Optional.of(found)
                 .map(Optional::get)
                 .map(a -> this.transactionStrategyNavigator.deposit(a, request.getAmount()))
                 .map(accountRepository::save)
                 .map(accountAdapter::mapToResponse)
-                .orElseThrow(() -> new BankAppException(BankAppExceptionCode.INTERNAL_SERVER_ERROR));
+                .orElseThrow(() -> new BankAppException(BankAppExceptionCode.SERVER_TRANSACTION_EXCEPTION));
     }
     private String generateAcctNbr(){
         return String.valueOf(new Random().nextInt(99999999));
     }
-
+    private boolean isValidAmount(Double amount){
+        return amount > 0.0;
+    }
 	@Override
 	public List<AccountResponse> getAllAccounts() {
-		return accountRepository.findAll().stream().map(accountAdapter::mapToResponse).toList();
+		return accountRepository.findAll().stream().map(accountAdapter::mapToResponse).collect(Collectors.toList());
 	}
 
 	@Override
